# cmake-cpp-barcode-qrcode-mrz

./: .gitignore  .gitmodules  BarcodeReader.cxx  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
bridge/: CMakeLists.txt  bridge.cpp  bridge.h
cvcamera/example/: CMakeLists.txt
dcv/include/: DynamsoftBarcodeReader.h  DynamsoftCaptureVisionRouter.h  DynamsoftCodeParser.h  DynamsoftCore.h  DynamsoftDocumentNormalizer.h  DynamsoftImageProcessing.h  DynamsoftLabelRecognizer.h  DynamsoftLicense.h  DynamsoftUtility.h
dcv/lib/mac/: libDynamsoftCaptureVisionRouter.dylib  libDynamsoftCodeParser.dylib  libDynamsoftCodeParserDedicator.dylib  libDynamsoftCore.dylib  libDynamsoftIdentityUtility.dylib  libDynamsoftNeuralNetwork.dylib  libDynamsoftUtility.dylib
dcv/lib/mac/universal2/: libDynamsoftCodeParser.dylib  libDynamsoftCodeParserDedicator.dylib  libDynamsoftUtility.dylib
dcv/lib/win/: DynamsoftCaptureVisionRouterx64.lib  DynamsoftCorex64.lib  DynamsoftImageProcessingx64.lib
dcv/resource/Models/: MRZTextLineRecognition.data
examples/10.x/command-line/: CMakeLists.txt  main.cpp
examples/10.x/mrz/: CMakeLists.txt  main.cpp  maincv.cpp
examples/10.x/opencv_camera/: CMakeLists.txt  main.cxx
examples/10.x/win32_gui/: BarcodeReader.cpp  BarcodeReader.vcxproj
examples/benchmark/: .gitignore  CMakeLists.txt  README.md  benchmark-barcode-reading-cpp-zxing-cpp-dynamsoft-barcode-reader.md  main.cpp
examples/benchmark/configs/: benchmark_environment.json  protocol-v1.json  symbology_support.json  zxing_all_supported.json
examples/benchmark/include/: barber_dataset.h  benchmark_types.h  decoder_adapter.h  hash.h  image_loader.h  matcher.h  metrics.h  normalization.h  result_writer.h
examples/benchmark/manifests/: annotation_review.json
examples/benchmark/src/: barber_dataset.cpp  dynamsoft_decoder.cpp  hash.cpp  image_loader.cpp  main.cpp  matcher.cpp  metrics.cpp  normalization.cpp  result_writer.cpp  zxing_decoder.cpp
examples/benchmark/tests/: test_barber_parser.cpp  test_main.cpp  test_matching.cpp  test_metrics.cpp  test_support.h
examples/benchmark/tools/: generate_benchmark_media.py  generate_html_report.py  validate_results.py
examples/benchmark/zxing-cpp/include/: Version.h
examples/command-line/: CMakeLists.txt  README.md  main.cpp
examples/mrz/: CMakeLists.txt
examples/opencv_camera/: CMakeLists.txt  main.cxx
examples/opencv_file/: CMakeLists.txt  main.cxx
examples/qt_barcode_scanner/: .gitignore  CMakeLists.txt  README.md  article.md  barcodeworker.cpp  barcodeworker.h  build.bat  build.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencvcamera.cpp  opencvcamera.h  videosurface.cpp  videosurface.h
examples/qt_mrz/: CMakeLists.txt  README.md  mainwindow.cpp
examples/rust/: Cargo.toml  README.md  build.bat  build.rs  run.bat  setup-path.bat
examples/rust/lib/: bridge.cpp  bridge.h
examples/rust/src/: bindings.rs  main.rs
examples/webp/: README.md
examples/webp/cpp/: CMakeLists.txt  main.cxx
examples/win32_gui/: BarcodeReader.cpp  BarcodeReader.vcxproj
litecam/examples/barcode/: CMakeLists.txt  capture_callback.cpp  main.cpp  main_thread.cpp
litecam/examples/mrz/: CMakeLists.txt  README.md  main.cpp
